--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,5 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-webflux')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile("org.assertj:assertj-core:3.10.0")
 }
